--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsup",
     "dev": "cross-env NODE_ENV=development && tsup --watch",
     "start": "npm run openapi && cross-env NODE_ENV=production node dist/index.js",
+    "test": "vitest",
     "openapi": "swagger-cli bundle ./src/openapi/openapi.yaml --outfile ./dist/openapi/openapi.yaml --type yaml"
   },
   "dependencies": {
@@ -27,10 +28,13 @@
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
+    "@types/supertest": "^6.0.3",
+    "supertest": "^7.1.4",
     "swagger-cli": "^4.0.4",
     "tsup": "^8.5.1",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.14"
   },
   "engines": {
     "node": ">=24.11.1"
